<resources>
    <string name="app_name">Card Czar</string>

    <string name="hello_world">This is the default for new activities.  Don\'t delete.</string>

    <!-- Main -->
    <string name="action_settings">Settings</string>
    <string name="joinButtonText">Join Game</string>
    <string name="hostButtonText">Host Game</string>

    <!-- HostStart -->
    <string name="title_activity_host_start">Host Start</string>
    <string name="roomnameTextViewText">Choose a room name. The roomname can only contain the characters a-z, A-Z ,0-9 or _.\n You\'ll need to give this to users. </string>
    <string name="roomnameEditTextText">r12345678</string>
    <string name="hostnameTextViewText">Enter your username</string>
    <string name="hostnameEditTextText">host</string>
    <string name="hostStartButtonText">Start Room</string>
    <string name="serverTextViewText">No status from server</string>

    <!-- UserStart -->
    <string name="title_activity_user_start">User Start</string>
    <string name="roomJoinTextViewText">Enter room name</string>
    <string name="roomJoinEditTextText">r12345678</string>
    <string name="usernameTextViewText">Enter your username</string>
    <string name="usernameEditTextText">user</string>
    <string name="userStartButtonText">Join Game</string>
    <string name="roomStatusTextViewText">No status from server</string>

    <!-- Room -->
    <string name="title_activity_room">Room name = </string>
    <string name="userListTextViewText">User list here.</string>
    <string name="refreshUsersButtonText">Refresh</string>
    <string name="gameStartButtonText">Start</string>
    <string name="statusTextViewText">  Status = OK</string>

    <!-- WaitingRoom -->
    <string name="title_activity_waiting_room">WaitingRoom</string>
    <string name="waitingTextViewText">Wait for host</string>
    <string name="quit_game">Quit Game</string>

    <!-- Gameplay -->
    <string name="title_activity_gameplay">Round 1</string>
    <string name="baitTextViewText">!</string>
    <string name="button1Text">!</string>
    <string name="button2Text">!</string>
    <string name="button3Text">!</string>
    <string name="button4Text">!</string>
    <string name="button5Text">!</string>
    <string name="button6Text">!</string>
    <string name="button7Text">!</string>
    <string name="button8Text">!</string>
    <string name="winnerText">Winner is:</string>

    <!-- QuitGameActivity -->
    <string name="title_activity_quit_game">Quit</string>
    <string name="quitMessage">You have now Quit the game. You may not rejoin the game.</string>

    <!-- Game Over-->
    <string name="title_activity_game_over">Game Over</string>
    <string name="restartButtonText">New Button</string>



</resources>
