<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.crimson30.cardczar.GameplayActivity">

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button1Text"
        android:id="@+id/button1"
        android:onClick="button1Click"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button2Text"
        android:id="@+id/button2"
        android:onClick="button2Click"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button3Text"
        android:id="@+id/button3"
        android:onClick="button3Click"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button4Text"
        android:id="@+id/button4"
        android:onClick="button4Click"
        android:layout_alignTop="@+id/button3"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button5Text"
        android:id="@+id/button5"
        android:onClick="button5Click"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button6Text"
        android:id="@+id/button6"
        android:onClick="button6Click"
        android:layout_alignTop="@+id/button5"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button7Text"
        android:id="@+id/button7"
        android:onClick="button7Click"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/button8Text"
        android:id="@+id/button8"
        android:onClick="button8Click"
        android:layout_alignTop="@+id/button7"
        android:layout_alignStart="@+id/button6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/baitTextViewText"
        android:id="@+id/baitTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/winnerText"
        android:id="@+id/winnerText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
